[+] Cleaned up kiwi packages